tests/fixtures/nupm/rejected/malformed-closure/nupm.nuon
{
    name: "bad-closure"
    type: module
    version: "0.1.0"
    init: {|| print "must not execute"}
}
